--- a/base.css
+++ b/base.css
@@ -22,8 +22,7 @@
     color: rgba(0, 0, 0, 0.87);
   }
   body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-      Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   }
   h1,
   h2,
@@ -151,10 +150,10 @@
     text-decoration: underline;
   }
   code {
-    border: 1px solid #BDBDBD;
-    padding: 0em 0.25em;
+    border: 1px solid #bdbdbd;
+    padding: 0 0.25em;
     border-radius: 3px;
-    background: #EEEEEE;
+    background: #EEE;
     font-size: 95%;
   }
   
@@ -311,11 +310,6 @@
     flex-wrap: wrap;
     align-items: stretch;
     padding: 0;
-    /**
-     * Temporary hack to be sure avatar
-     * is rendered on print preview
-     */
-    display: block !important;
   }
   .grid .grid {
     margin-left: -1em;
@@ -609,7 +603,7 @@
     color: #0077b5;
   }
   .contacts li a.telegram:hover {
-    color: #0088cc;
+    color: #08c;
   }
   .contacts li a.phone:hover {
     color: dimgrey;
